--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="../../_shared/css/normalize.css" />
         <link rel="stylesheet" href="../../_shared/css/styles.css" />
     </head>
-    <body>
+    <!----<body>
         <div class="container">
             <header>
                 <h1>BeCode / JavaScript</h1>
@@ -32,7 +32,22 @@
                         in a <em>dialog box (alert box)</em>.</p>
                 </section>
             </div>
-        </div>
+        </div>-->
+
+        <div class="container">
+            <header>
+                <h1>BeCode / JavaScript</h1>
+                <h2>
+                    <span>1.2</span>
+                    <strong>var & prompt</strong>
+                </h2>
+            </header>
+            <div class="content">
+                <section class="explain">
+                    <p>Ask the name of the user, and display in the  <em>dialog box</em> the following welcome message : <em>Hello, [name] !</em>.</p>
+                </section>
+            </div>
+
 
         <script src="./script.js"></script>
     </body>
