--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>-->
 
-        <div class="container">
+        <!----<div class="container">
             <header>
                 <h1>BeCode / JavaScript</h1>
                 <h2>
@@ -46,6 +46,22 @@
                 <section class="explain">
                     <p>Ask the name of the user, and display in the  <em>dialog box</em> the following welcome message : <em>Hello, [name] !</em>.</p>
                 </section>
+            </div>--->
+
+            <div class="container">
+                <header>
+                    <h1>BeCode / JavaScript</h1>
+                    <h2>
+                        <span>1.3</span>
+                        <strong>promp & if</strong>
+                    </h2>
+                </header>
+                <div class="content">
+                    <section class="explain">
+                        <p>Ask the user if he wants some cake. If yes, congratulate him/her; for any other response, say:
+                            <em>More cake for me then :p !</em></p>
+                    </section>
+                </div>
             </div>
 
 
