--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </section>
             </div>--->
 
-            <div class="container">
+            <!----<div class="container">
                 <header>
                     <h1>BeCode / JavaScript</h1>
                     <h2>
@@ -62,7 +62,24 @@
                             <em>More cake for me then :p !</em></p>
                     </section>
                 </div>
-            </div>
+            </div>-->
+           
+           <!--- <div class="container">
+                <header>
+                    <h1>BeCode / JavaScript</h1>
+                    <h2>
+                        <span>1.4</span>
+                        <strong>AGT with confirmation</strong>
+                    </h2>
+                </header>
+                <div class="content">
+                    <section class="explain">
+                        <p>Ask three questions to the user: his/her Age, Gender, and the Town where he/she lives. 
+                            Display the collected responses in a <em>dialog box</em> and ask to confirm. 
+                            If not confirmed, <strong>re-run the process</strong>.</p>
+                    </section>
+                </div>
+            </div> -->
 
 
         <script src="./script.js"></script>
