--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="../../_shared/css/normalize.css" />
         <link rel="stylesheet" href="../../_shared/css/styles.css" />
     </head>
+    <!--prompt-->
     <!----<body>
         <div class="container">
             <header>
@@ -80,6 +81,36 @@
                     </section>
                 </div>
             </div> -->
+    
+        <!--maths-->
+        <!--calculator
+        <div class="container">
+            <header>
+                <h1>BeCode / JavaScript</h1>
+                <h2>
+                    <span>2.1</span>
+                    <strong>Calculator</strong>
+                </h2>
+            </header>
+            <div class="content">
+                <section class="explain">
+                    <p>Correct the script to make the calculator work.</p>
+                </section>
+                Enter first number
+                    <input type="number" id="valueOfX">
+                Enter second number
+                    <input type="number" id="valueOfY">
+                <br>
+                    <button onclick="operation('add')"> + </button>
+                    <button onclick="operation('sub')"> - </button>
+                    <button onclick="operation('mul')"> * </button>
+                    <button onclick="operation('div')"> / </button>
+                    <h1 id="resultHere"></h1>
+            </div>
+                </section>
+            </div>
+        </div>
+        -->
 
 
         <script src="./script.js"></script>
