--- a/index.html
+++ b/index.html
@@ -84,33 +84,6 @@
     
         <!--maths-->
         <!--calculator
-        <div class="container">
-            <header>
-                <h1>BeCode / JavaScript</h1>
-                <h2>
-                    <span>2.1</span>
-                    <strong>Calculator</strong>
-                </h2>
-            </header>
-            <div class="content">
-                <section class="explain">
-                    <p>Correct the script to make the calculator work.</p>
-                </section>
-                Enter first number
-                    <input type="number" id="valueOfX">
-                Enter second number
-                    <input type="number" id="valueOfY">
-                <br>
-                    <button onclick="operation('add')"> + </button>
-                    <button onclick="operation('sub')"> - </button>
-                    <button onclick="operation('mul')"> * </button>
-                    <button onclick="operation('div')"> / </button>
-                    <h1 id="resultHere"></h1>
-            </div>
-                </section>
-            </div>
-        </div>
-        -->
 
          <div class="container">
             <header>
@@ -144,6 +117,40 @@
                 </section>
             </div>
         </div>
+                -->
+                <!--calculator 2-->
+                <div class="container">
+                    <header>
+                        <h1>BeCode / JavaScript</h1>
+                        <h2>
+                            <span>2.2</span>
+                            <strong>calculator (2)</strong>
+                        </h2>
+                    </header>
+                    <div class="content">
+                        <section class="explain">
+                            <p>Complete the script to make the calculator work. To do it use the switch.</p>
+                        </section>
+                        <section class="material">
+                            <form action="#" method="post">
+                                <div class="field">
+                                    <label for="op-one">Operand one:</label>
+                                    <input type="text" name="op-one" id="op-one" />
+                                </div>
+                                <div class="field">
+                                    <label for="op-two">Operand two:</label>
+                                    <input type="text" name="op-two" id="op-two" />
+                                </div>
+                                <div class="actions">
+                                    <button onclick="showresult('addition')">+</button>
+                                    <button onclick="showresult('substraction')">-</button>
+                                    <button onclick="showresult('multiplication')">*</button>
+                                    <button onclick="showresult('division')">/</button>
+                                </div>
+                            </form>
+                        </section>
+                    </div>
+                </div>
 
 
         <script src="./script.js"></script>
