getting the square numbers using a for loop

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
         </div>
                 -->
-                <!--calculator 2-->
+                <!--calculator 2
                 <div class="container">
                     <header>
                         <h1>BeCode / JavaScript</h1>
@@ -151,6 +151,28 @@
                         </section>
                     </div>
                 </div>
+            -->
+            <!--even squares-->
+            <div class="container">
+                <header>
+                    <h1>BeCode / JavaScript</h1>
+                    <h2>
+                        <span>2.3</span>
+                        <strong>squares and pairs</strong>
+                    </h2>
+                </header>
+                <div class="content">
+                    <section class="explain">
+                        <p>On click on the button, calculate and display the square numbers between 1 and 21.</p>
+                    </section>
+                    <section class="material">
+                        <div class="actions">
+                            <button onclick="square()" type="button" id="run">run the script</button>
+                        </div>
+                    </section>
+                </div>
+            </div>
+    
 
 
         <script src="./script.js"></script>
