--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </div>
                 </div>
             -->
-            <!--even squares-->
+            <!--even squares
             <div class="container">
                 <header>
                     <h1>BeCode / JavaScript</h1>
@@ -169,6 +169,32 @@
                         <div class="actions">
                             <button onclick="square()" type="button" id="run">run the script</button>
                         </div>
+                    </section>
+                </div>
+            </div>
+            -->
+            <!--Sort Numbers-->
+            <div class="container">
+                <header>
+                    <h1>BeCode / JavaScript</h1>
+                    <h2>
+                        <span>2.4</span>
+                        <strong>Sorting the numbers</strong>
+                    </h2>
+                </header>
+                <div class="content">
+                    <section class="explain">
+                        <p>On click to the button, get the numbers displayed in the input, and display them sorted in ascending order.</p>
+                    </section>
+                    <section class="material">
+                        <form action="#" method="post">
+                            <div class="field">
+                                <label for="numbers">Numbers to sort:</label>
+                                <p id="demo"></p>
+                                <button id="submit">Run the script</button>
+                            </div></button>
+                            </div>
+                        </form>
                     </section>
                 </div>
             </div>
