factorial code with for loop

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
             </div>
             -->
-            <!--Sort Numbers-->
+            <!--Sort Numbers
             <div class="container">
                 <header>
                     <h1>BeCode / JavaScript</h1>
@@ -198,6 +198,25 @@
                     </section>
                 </div>
             </div>
+            -->
+            <!--factorial-->
+            <header>
+                <h1>BeCode / JavaScript</h1>
+                <h2>
+                    <span>2.5</span>
+                    <strong>Factorial</strong>
+                </h2>
+            </header>
+            <body>
+                <section class="explain">
+                <p>When you click the button, get the number in the input, and show its factorial.</p>
+                </section>
+                Enter Number: <input id="num">
+                <button onclick="show()">Run the script</button>
+                <input id="answer">
+                </body>
+            </div>
+
     
 
 
