--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 </div>
             </div>
             -->
-            <!--factorial-->
+            <!--factorial
             <header>
                 <h1>BeCode / JavaScript</h1>
                 <h2>
@@ -216,10 +216,26 @@
                 <input id="answer">
                 </body>
             </div>
-
-    
-
-
+            -->
+            <!--fizzbuzz
+            <body>
+                    <div class="container">
+                        <header>
+                            <h1>BeCode / JavaScript</h1>
+                            <h2>
+                                <span>2.6</span>
+                                <strong>fizzbuzz</strong>
+                            </h2>
+                        </header>
+                        <div class="content">
+                            <section class="explain">
+                                <p>In the console, for each numbers between 1 and 100 : show "fizz" if the number is a multiple of 3, 
+                                    "buzz" if it's a multiple of 5, "fizzbuzz" if it's both, or simply the number if it's none of these.
+                                </p>
+                            </section>
+                        </div>
+                    </div>
+                    -->
         <script src="./script.js"></script>
     </body>
 </html>
