--- a/index.html
+++ b/index.html
@@ -236,6 +236,31 @@
                         </div>
                     </div>
                     -->
+                    <!--colors-->
+                    <!--change bg one
+                    <div class="container">
+                            <header>
+                                <h1>BeCode / JavaScript</h1>
+                                <h2>
+                                    <span>3.1</span>
+                                    <strong>background color (1)</strong>
+                                </h2>
+                            </header>
+                            <div class="content">
+                                <section class="explain">
+                                    <p>For each button, when clicked change the background color of the page to the one indicated.</p>
+                                </section>
+                                <section class="material">
+                                    <div class="actions">
+                                        <button type="button" onclick="myFunction()" id="red">Red</button>
+                                        <button type="button" onclick="myFunction1()"id="green">Green</button>
+                                        <button type="button" onclick="myFunction2()"id="yellow">Yellow</button>
+                                        <button type="button" onclick="myFunction3()"id="blue">Blue</button>
+                                    </div>
+                                </section>
+                            </div>
+                        </div>
+                        -->
         <script src="./script.js"></script>
     </body>
 </html>
