changing the background color with the inputfield so you can choose yourself a color

--- a/index.html
+++ b/index.html
@@ -261,6 +261,31 @@
                             </div>
                         </div>
                         -->
+                        <!--change bg two-->
+
+                        <div class="container">
+                                <header>
+                                    <h1>BeCode / JavaScript</h1>
+                                    <h2>
+                                        <span>3.2</span>
+                                        <strong>background color (2)</strong>
+                                    </h2>
+                                </header>
+                                <div class="content">
+                                    <section class="explain">
+                                        <p>When you click the button, get the value of the input and use it as the background color for the page.</p>
+                                    </section>
+                                    <section class="material">
+                                        <form action="#" method="post">
+                                            <div class="field">
+                                                <label for="color">Color:</label>
+                                                <input type="text" id="txt1"/ >
+                                                <input type="button" id="btn" value="Run the script"/>
+                                        </form>
+                                    </section>
+                                </div>
+                            </div>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
         <script src="./script.js"></script>
     </body>
 </html>
